# parsers

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff-on-write.sh
app/: __init__.py  cli.py  config.py  detect.py  exceptions.py  hybrid.py  image.py  main.py  metadata.py  pdf_helpers.py  security.py  soffice.py  worker.py
app/parsers/: __init__.py  base.py  csv_parser.py  docx.py  email_parser.py  html.py  image.py  json_parser.py  markitdown_util.py  pdf.py  pptx.py  registry.py  text.py  xlsx.py
scripts/: benchmark.py  check_embedded_ocr.py
tests/: conftest.py  test_concurrency.py  test_convert.py  test_embedded_ocr.py  test_fallbacks.py  test_image_gemini.py  test_metadata.py  test_mime_routing.py  test_odf.py  test_pdf_routing.py  test_security.py
